--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
     <!-- Bootstrap Core CSS -->
     <link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="http://fans-file.b0.upaiyun.com/www/fans.css" rel="stylesheet">
+    <!-- <link href="http://fans-file.b0.upaiyun.com/www/fans.css" rel="stylesheet"> -->
+        <link href="fans.css" rel="stylesheet">
 </head>
 <body>
     <!-- Page Content -->
@@ -21,6 +22,7 @@
                 <h2><b>影藏人生，迷藏之梦</b></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>
                 <p><img src="http://fans-photo.b0.upaiyun.com/bg/qrcode.jpg" id="qrcode"></p>
+              
             </div>
         </div>
         <!-- /.row -->
@@ -53,6 +55,7 @@
     <script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- jQuery backstretch -->
     <script src="http://cdn.bootcss.com/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
-    <script src="http://fans-file.b0.upaiyun.com/www/fans.js"></script>
+    <!-- // <script src="http://fans-file.b0.upaiyun.com/www/fans.js"></script> -->
+        <script src="fans.js"></script>
 </body>
 </html>
