--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <!-- <link href="http://fans-file.b0.upaiyun.com/www/fans.css" rel="stylesheet"> -->
-        <link href="fans.css" rel="stylesheet">
+    <link href="fans.css" rel="stylesheet">
 </head>
 <body>
     <!-- Page Content -->
@@ -48,6 +48,13 @@
         </div>
       </div>
     </footer>
+    <footer class="copyright">
+      <div class="container-fluid">
+        <div class="container product">
+        <span>© 2015 北京文青博业科技有限公司版权所有</span>
+      </div>
+      </div>
+    </footer>
 
     <!-- jQuery -->
     <script src="http://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
@@ -56,6 +63,6 @@
     <!-- jQuery backstretch -->
     <script src="http://cdn.bootcss.com/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
     <!-- // <script src="http://fans-file.b0.upaiyun.com/www/fans.js"></script> -->
-        <script src="fans.js"></script>
+    <script src="fans.js"></script>
 </body>
 </html>
